<resources>
    <string name="apps_id">8180490980</string>
    <string name="facebook_app_id">929808520498625</string>
    <string name="loading">Loading...</string>
    <string name="processing">Processing...</string>
    <string name="app_name">PopeYes</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="login_with_google">Log in with Google+</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">Log In</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_twitter">Sign Up with Twitter</string>
    <string name="sign_up_with_google">Sign Up with Google+</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="menu">BUY NOW</string>
    <string name="home">HOME</string>
    <string name="favs">CARDS</string>
    <string name="basket">BASKET</string>
    <string name="profile">OUTLETS</string>
    <string name="favourites">FAVOURITES</string>
    <string name="add_favourite">ADD\nFAVOURITE</string>
    <string name="edit">EDIT</string>
    <string name="cancel">CANCEL</string>
    <string name="upload_picture_option">Upload Pictures Option</string>
    <string name="how_do_you_want_to_set_your_picture" translatable="false">How do you want to set your picture?</string>
    <string name="become_a_member">Become a member in a few clicks.</string>
    <string name="love_being_souperholic">"We hope you'll love being Souperholic"</string>
    <string name="email_not_match">Email not match format</string>
    <string name="empty_error">Please make sure you have fill in the fields!</string>
    <string name="password_not_match">Password and retype password not match</string>
    <string name="min_password_character">Password min 6 characters</string>
    <string name="upload_your_personal">Please upload your personal image</string>
    <string name="please_enter_the_required_information">Please enter the required information</string>
    <string name="at_least_character">At least 6 characters</string>
    <string name="optional_survey">Optional Survey</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_remove_your_drink">Are you sure remove this drink?</string>
    <string name="are_you_sure_you_want_to_delete_this_favourite">Are you sure you want to delete this favourite?</string>
    <string name="pick_up_u">PICK UP</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="order">ORDER</string>
    <string name="basket_title">BASKET</string>
    <string name="total">Total:</string>
    <string name="choose_pick_up">Choose Pick up</string>
    <string name="or">OR</string>
    <string name="menu_categories">MENU CATEGORIRES</string>
    <string name="child_menu">MENU</string>
    <string name="variant_select">VARIANT SELECTION</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="cancel1">Cancel</string>
    <string name="del">Del</string>
    <string name="pick_up_at">PICKUP AT</string>
    <string name="search">Search</string>
    <string name="collect_in">collect in</string>
    <string name="min_time">mins time</string>
    <string name="at">at</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="remove">Remove</string>
    <string name="size">Size</string>
    <string name="sml">SML</string>
    <string name="reg">REG</string>
    <string name="lrg">LRG</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="delete_your_favorite_success">Delete your favorite success</string>
    <string name="add_favorite_success">Drink is added to favourite</string>
    <string name="price">Price: </string>
    <string name="selected_add_on">Selected Add ons\n</string>
    <string name="your_basket_is_empty">Your basket is empty</string>
    <string name="contact">"\nContact: "</string>
    <string name="user_entered">User entered=</string>
    <string name="opening_hour">"\nOpening hour: "</string>
    <string name="please_choose_outlet">Please choose an Outlet</string>
    <string name="register_success">Register success</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="you_must_login_for_detect_beacon">You must login for detect beacon</string>
    <string name="bluetooth_le_dose_not_turn_on">Bluetooth LE dose not turn on</string>
    <string name="bluetooth_le_not_supported_by_this_device">Bluetooth LE not supported by this device</string>
    <string name="this_drink_has_no_add_ons">This Drink Has No Add-ons</string>
    <string name="check_out_now">CHECK OUT NOW</string>
    <string name="payment_successful">Your order is successful, please proceed to the outlet to collect your order. Keep your bluetooth turned on. When you enter the outlet, you will receive a secure passcode. Please present that to the cashier at the pick up area. Your Order ID is</string>
    <string name="no_add_ons">No Add Ons</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="redeem">Redeem</string>
    <string name="my_vouchers">MY VOUCHERS</string>
    <string name="promotions">PROMOTIONS</string>
    <string name="store">Store</string>
    <string name="set_password">SET PASSWORD/PIN</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password/Pin</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="voucher_detail">VOUCHER DETAIL</string>
    <string name="password_only_6_digits">Please key in 6 digit password/pin</string>
    <string name="input_personal_details">Please provide your personal details</string>
    <string name="security_questions">Please choose a security question and provide its answer</string>
    <string name="redirect_uri">/en/auth0</string>
    <string name="order1">Order #</string>
    <string name="discount">Discount: $</string>
    <string name="code">"\nCode: "</string>
    <string name="please_check_mail_to_confirm_this_new_password">Please check mail to confirm this new password/PIN</string>
    <string name="confirm_new_password">Confirm New Password/Pin</string>
    <string name="pin_not_correct">PIN is not correct, Please re-enter the PIN.</string>
    <string name="pin_is_correct">Payment authorisation is successful.</string>
    <string name="redeem_code">"Redeem code: "</string>
    <string name="coffe_bean">coffeebean</string>
    <string name="mess_first_passcode">To protect privacy and ensure the highest levels of security, it is mandatory that you to set up a 6 digit PIN. The process is fast and will take less than 20 seconds. Thank you. Tap HERE to continue.</string>
    <string name="str_continue">CONTINUE</string>
    <string name="passcode_cant_back">To protect privacy and ensure the highest levels of security, it is mandatory that you to set up a 6 digit PIN. The process is fast and will take less than 20 seconds.</string>
    <string name="not_right_manage_key">The security key is not right</string>
    <string name="dont_have_card">"You recently don't have an E-Card"</string>
    <string name="scan_card">Scan your Card</string>
    <string name="fragment_basket">BASKET</string>
    <string name="fragment_card">E-CARD</string>
    <string name="fragment_change_pass">CHANGE PASSWORD/PIN</string>
    <string name="fragment_menu">CATEGORIES</string>
    <string name="fragment_child_menu">MENU</string>
    <string name="fragment_delivery_track">DELIVERY TRACKING</string>
    <string name="fragment_home">DINING OPTIONS</string>
    <string name="fragment_favorites">FAVOURITES</string>
    <string name="fragment_map">MAP</string>
    <string name="fragment_transactions">TRANSACTIONS</string>
    <string name="fragment_vouchers">MY VOUCHERS</string>
    <string name="fragment_outlets">OUTLETS</string>
    <string name="fragment_passcode">ENTER PIN</string>
    <string name="fragment_pick_up">CARRY OUT</string>
    <string name="fragment_pick_up_delivery">DINE-IN</string>
    <string name="fragment_profile">MASTERPASS ACCOUNT</string>
    <string name="fragment_promotions">PROMOTIONS</string>
    <string name="fragment_resultant">MENU SELECTION</string>
    <string name="fragment_sign_up">SIGN UP</string>
    <string name="fragment_tss_home">TSS WIREFRAMES</string>
    <string name="fragment_update_profile">UPDATE PROFILE</string>
    <string name="fragment_variant_selection">VARIANT SELECTION</string>
    <string name="fragment_voucher_detail">VOUCHER DETAILS</string>
    <string name="fragment_outlet_detail">OUTLET INFO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qrscan">QRScanActivity</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_name">Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="msg_provide_registration_account">Please provide the following details to register an account with Popeyes</string>
    <string name="text_street_address">Street Address</string>
    <string name="text_address_2_optional">Address 2 (Optional)</string>
    <string name="text_city">City</string>
    <string name="text_postal_code">Postal Code</string>
    <string name="text_confirm_delivery_address">Confirm Delivery Address</string>
    <string name="text_start_order">Start Order</string>
    <string name="text_delivery_time">Delivery Time</string>
    <string name="msg_delivery_is_not_available_as_our_stores_are_closed">Delivery is not available as our stores \nare closed</string>
    <string name="msg_would_you_like_to_order_for_another_day">Would you like to order for another day ?</string>
    <string name="text_ok">OK</string>
    <string name="text_cash_on_delivery">Cash On Delivery</string>
    <string name="text_we_have_sent_a_4_digit_pin_code_to_your_mobile_number_at">We have sent a 4-Digit-Pin-Code to your mobile number at:</string>
    <string name="text_please_enter_your_pin">Please enter your pin:</string>
    <string name="text_to_confirm_your_delivery_order">to confirm your delivery order.</string>
    <string name="text_thank_you">Thank you!</string>
    <string name="text_summit">Summit</string>
    <string name="text_up_to_2_weeks">Up to 2 weeks in advance</string>
    <string name="text_date">Date</string>
    <string name="text_select_the_time">Select the time</string>
    <string name="text_create_new_password">Create new password</string>
    <string name="text_new_password">New password</string>
    <string name="text_please_enter_your_new_password">Please enter your new password</string>
    <string name="text_confirm_new_password">Confirm new password</string>
    <string name="btn_save_new_password_now">Save now</string>
    <string name="text_checkout_info">There is a minimum order amount of $12 \nbefore we can do a delivery to your location. \nPlease add more orders to your basket.</string>
</resources>