<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgpop_up"
    android:paddingEnd="@dimen/dimen12dp"
    android:paddingLeft="@dimen/dimen12dp"
    android:paddingRight="@dimen/dimen12dp"
    android:paddingStart="@dimen/dimen12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen18dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout5">

        <com.glite.popeyes.view.custom.VerdanaTextView
            style="@style/TextStyleBlue14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen3dp"
            android:text="@string/text_checkout_info" />

        <TextView
            style="@style/TextStyleBlue14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen3dp"
            android:text="@string/text_thank_you" />

    </LinearLayout>

    <Button
        style="@style/text.white.bold18sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:text="@string/text_ok"
        android:background="@drawable/bg_rouge_selector"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="@dimen/dimen18dp"
        android:layout_below="@+id/linearLayout5"/>

</RelativeLayout>