<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_popoyes_layerlist"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen24dp"
    android:paddingRight="@dimen/dimen24dp"
    android:paddingTop="@dimen/dimen32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_provide_registration"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/msg_provide_registration_account" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen32dp"
            android:orientation="vertical"
            android:paddingEnd="18dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingStart="18dp">


            <TextView
                android:id="@+id/text_delivery_name"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/edt_delivery_name"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_name"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/text_delivery_email"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_email_address" />

            <EditText
                android:id="@+id/edt_delivery_email"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_name"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/text_delivery_phone"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_phone_number" />

            <EditText
                android:id="@+id/edt_delivery_phone"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_name"
                android:inputType="phone" />

            <TextView
                android:id="@+id/text_delivery_street_address"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_street_address" />

            <EditText
                android:id="@+id/edt_delivery_street_address"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_delivery_address"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_delivery_address_2"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_address_2_optional" />

            <EditText
                android:id="@+id/edt_delivery_address_2"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_delivery_address"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/text_delivery_city"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_city" />

            <EditText
                android:id="@+id/edt_delivery_city"
                style="@style/EditTextGuestStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_delivery_address"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/text_delivery_postal_code"
                style="@style/TextStyleWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:maxLines="1"
                android:text="@string/text_postal_code" />

            <EditText
                android:id="@+id/edt_delivery_postal_code"
                style="@style/EditTextGuestStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/bg_postal_code"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/btn_confirm_delivery"
                style="@style/TextButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen24dp"
                android:background="@drawable/bg_summit_order"
                android:gravity="center"
                android:text="@string/text_confirm_delivery_address"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>