<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpopeyes"

    android:orientation="vertical">

    <!--<include layout="@layout/include_appbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.glite.popeyes.view.custom.FuturaTextView
            style="@style/text.blue.18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen16dp"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen24dp"
            android:text="@string/text_create_new_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen32dp"
            android:layout_marginRight="@dimen/dimen32dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:orientation="vertical">

            <com.glite.popeyes.view.custom.VerdanaTextView
                style="@style/text.blue.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_password"
                android:textStyle="normal" />

            <com.glite.popeyes.view.custom.VerdanaEditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen32dp"
                android:layout_marginTop="5.6dp"
                android:background="@drawable/rectangle_5_copy"
                android:hint="@string/text_please_enter_your_new_password"
                android:inputType="textPassword"
                android:paddingBottom="4.6dp"
                android:paddingLeft="@dimen/dimen12dp"
                android:paddingRight="@dimen/dimen12dp"
                android:paddingTop="@dimen/dimen12dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                android:textStyle="italic" />

            <com.glite.popeyes.view.custom.VerdanaTextView
                style="@style/text.blue.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_confirm_new_password"
                android:textStyle="normal" />

            <com.glite.popeyes.view.custom.VerdanaEditText
                android:id="@+id/edit_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6dp"
                android:background="@drawable/rectangle_5_copy"
                android:hint="@string/text_please_enter_your_new_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/dimen6dp"
                android:paddingLeft="@dimen/dimen12dp"
                android:paddingRight="@dimen/dimen12dp"
                android:paddingTop="@dimen/dimen12dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                android:textStyle="italic" />

            <com.glite.popeyes.view.custom.FuturaButton
                android:id="@+id/btn_save_new_password_now"
                style="@style/text.white.bold18sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_normal"
                android:layout_marginTop="@dimen/dimen24dp"
                android:background="@drawable/bg_blue_button_selector"
                android:text="@string/btn_save_new_password_now" />

            <com.glite.popeyes.view.custom.FuturaButton
                android:id="@+id/btn_cancel_new_password"
                style="@style/text.white.bold18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16dp"
                android:background="@drawable/bg_rouge_selector"
                android:text="@string/cancel">

            </com.glite.popeyes.view.custom.FuturaButton>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
